--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文件编辑器</title>
+    <title>妹居存档编辑器</title>
     <style>
         * {
             box-sizing: border-box;
@@ -234,8 +234,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>文件编辑器</h1>
-        <p class="description">选择文件进行编辑，修改完成后保存到本地</p>
+        <h1>妹居存档编辑器</h1>
+        <p class="description">选择存档文件进行编辑，修改完成后保存到本地</p>
         
         <div class="file-input-section">
             <label for="fileInput" class="file-input-label">选择文件</label>
